[package]
name = "testing"
version = "0.1.0"
authors = ["KarimAllah Ahmed <karim.allah.ahmed@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = { version = "0.9.4", features = ["map_physical_memory"]}
x86_64 = "0.11.0"
rlibc = "1.0.0"
libvmm = { path = "../../libvmm" }
libos = { version = "^0.1" }
lazy_static = { version = "1.3.0", features = ["spin_no_std"] }

[package.metadata.bootimage]
test-args = [
    "-enable-kvm",
    "-cpu", "kvm64,+vmx",
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
test-success-exit-code = 33
